templates/article-signup/article-signup.css
.article-signup main h1 {
  color: var(--text-color);
}

.article-signup main .article-signup-section {
  display: grid;
  gap: 1rem;
}

.article-signup main .newsletter-signup {
  margin-top: 1rem;
}

.article-signup-content p {
  margin: 20px auto;
}

@media (min-width: 1000px) {
  .article-signup main .article-signup-section {
    grid-template:
      "image text" 1fr
      "image newsletter" auto;
  }

  .article-signup main .article-signup-section > picture {
    grid-area: image;
  }

  .article-signup main .article-signup-section .article-signup-content {
    grid-area: text;
  }

  .article-signup main .article-signup-section .newsletter-signup {
    grid-area: newsletter;
  }
}

